--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
-estilos.css
 body
 { 
     color: rgb(42, 165, 69);
     text-align: center;
-    font-family: Helvetica,
+    font-family: "Arial";
+
 }
